modules/preprocessor/test/files/syntax_errors/import.u
@42("test.u")
@test("test.u")

module Main

end